--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -2,62 +2,73 @@
 <html lang="en">
 
 <head>
-    {% load static %} {% include "bootstrap.html" %}
+    {% load static %}
 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
     <link rel="stylesheet" href="{% static 'final.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>Health Tracker</title>
+
+    {% include "bootstrap.html" %}
 </head>
 
 <body>
     {% include "nav.html" %}
-    <h1>Final Project: Health Tracker</h1>
-    <p>tHome page</p>
+    <center>
+        <h1>Final Project: Health Tracker</h1>
+        <p>Home page</p>
+    </center>
     <div class="container">
         <div class="row">
-          <div class="col-sm">
-            <div class="ct-chart ct-perfect-fourth", id="example-pie-chart">
-              <script>
-                new Chartist.Pie('#example-pie-chart',
-                { labels: ['Completed', 'Pending'], series: [30,60] },
-                { labelInterpolationFnc: function(value) { return value[0] } },
-                [['screen', { chartPadding: 20, labelOffset: 60, labelDirection: 'explode',
-                labelInterpolationFnc: function(value) { return value;}}]]);
-    
-    
-              </script>
-    
+            <div class="col-sm">
+                <div class="ct-chart ct-perfect-fourth" , id="example-pie-chart">
+                    <script>
+                        new Chartist.Pie('#example-pie-chart', {
+                            labels: ['Completed', 'Pending'],
+                            series: [30, 60]
+                        }, {
+                            labelInterpolationFnc: function(value) {
+                                return value[0]
+                            }
+                        }, [
+                            ['screen', {
+                                chartPadding: 20,
+                                labelOffset: 60,
+                                labelDirection: 'explode',
+                                labelInterpolationFnc: function(value) {
+                                    return value;
+                                }
+                            }]
+                        ]);
+                    </script>
+                </div>
             </div>
-    
-          </div>
-          <div class="col-sm">
-            <div class="ct-chart-br ct-perfect-fourth", id="example-bar-graph">
-              <script>
-                new Chartist.Bar('.ct-chart-br', {
-                  //labels: []
-                  series: [
-                      30, 80
-                      60, 120
-                  ]
-                }, {
-                  seriesBarDistance: 10,
-                  axisX: {
-                    offset: 60
-                  },
-                  axisY: {
-                    offset: 80,
-                    // labelInterpolationFnc: function(value) {
-                    //   return value + ' CHF'
-                    // },
-                    scaleMinSpace: 15
-                  }
-                });
-              </script>
+            <div class="col-sm">
+                <div class="ct-chart-br ct-perfect-fourth" , id="example-bar-graph">
+                    <script>
+                        new Chartist.Bar('.ct-chart', {
+                            labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'],
+                            series: [
+                                [5, 4, 3, 7, 5, 10, 3],
+                                [3, 2, 9, 5, 4, 6, 4]
+                            ]
+                        }, {
+                            seriesBarDistance: 10,
+                            reverseData: true,
+                            horizontalBars: true,
+                            axisY: {
+                                offset: 70
+                            }
+                        });
+                    </script>
+                </div>
             </div>
-          </div>
         </div>
 </body>
 
