--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'final.css' %}"> 
 <nav class="navbar navbar-expand-lg navbar bg-light">
     <a class="navbar-brand" href="/">Health Tracker</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
