--- a/templates/food/food.html
+++ b/templates/food/food.html
@@ -3,14 +3,64 @@
 
 <head>
     {% load static %}
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     {% include 'bootstrap.html' %}
-    <title>Document</title>
+    <script src="{% static 'final.js' %}"></script>
+    <title>Food Page</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-
+    J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-
+    Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-
+    Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-
+    wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="{% static 'final.css' %}">
 </head>
 
 <body>
     {% include "nav.html" %}
-    <h1>Food Page</h1>
+    <center><h1>Food Page</h1></center>
+    <div class="jumbotron">
+        <h2>Food</h2>
+        {% if not food_data %}
+        <p>There are no meals to display</p>
+        {% else %}
+        <table id="food-table" class="table table-striped table-bordered table-sm" cellspacing='0' width='100%'>
+            <tr>
+                <th>Description</th>
+                <th>Category</th>
+                <th>Calories</th>
+                <th>Sodium</th>
+                <th>Protien</th>
+                <th>Carbohydrates</th>
+                <th>Fats</th>
+                <th>Sugars</th>
+            </tr>
+            {% for row in food_data %}
+            <tr>
+                <td>{{ row.description }}</td>
+                <td>{{ row.category }}</td>
+                <td>{{ row.calories }}</td>
+                <td>{{ row.sodium }}</td>
+                <td>{{ row.protien }}</td>
+                <td>{{ row.carbs }}</td>
+                <td>{{ row.fats }}</td>
+                <td>{{ row.sugars }}</td>
+                <td>
+                    <a class="btn btn-primary" href="/food/edit/">Edit</a>
+                    <a class="btn btn-primary" href="#" onclick="confirmDeleteModal()">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+        {% endif %}
+        <form method="GET" action="/food/add/">
+            <input type="submit" class="btn btn-primary" value="Add Food Item">
+        </form>
+    </div>
 
 </body>
 
