--- a/templates/food/edit.html
+++ b/templates/food/edit.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Add Page</title>
-    {% load static %}
-    {% include 'bootstrap.html' %}
-    <link rel="stylesheet" href="{% static 'final.css' %}">
+    <title>Edit Food Entry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">
@@ -15,17 +12,17 @@
 </head>
 <body>
     {% include 'nav.html' %}
-    <div class="jumbotron">
-        <h1 id="food_title">Add Food Item</h1>
-        <form method="post">
+    <div class='jumbotron'>
+        <h1>Edit Food Entry</h1>
+        <form method="POST">
             {% csrf_token %}
             <table>
                 {{ form_data.as_table }}
                 <tr>
                     <td></td>
                     <td>
-                        <a href="/food/" class-"btn btn-secondary">Cancel</a>
-                        <input type="submit" class='btn btn-primary' name="add" value="Add Food Item">
+                        <a href="/food/" class='btn btn-secondary'>Cancel</a>
+                        <input type="submit" class='btn btn-primary' name='edit' value='Save'>
                     </td>
                 </tr>
             </table>
