--- a/templates/food/food.html
+++ b/templates/food/food.html
@@ -30,7 +30,7 @@
         {% else %}
         <table id="food-table" class="table table-striped table-bordered table-sm" cellspacing='0' width='100%'>
             <tr>
-                <th>Description</th>
+                <th>Name</th>
                 <th>Category</th>
                 <th>Calories</th>
                 <th>Sodium</th>
@@ -38,10 +38,11 @@
                 <th>Carbohydrates</th>
                 <th>Fats</th>
                 <th>Sugars</th>
+                <th>Actions</th>
             </tr>
             {% for row in food_data %}
             <tr>
-                <td>{{ row.description }}</td>
+                <td>{{ row.name }}</td>
                 <td>{{ row.category }}</td>
                 <td>{{ row.calories }}</td>
                 <td>{{ row.sodium }}</td>
@@ -50,7 +51,7 @@
                 <td>{{ row.fats }}</td>
                 <td>{{ row.sugars }}</td>
                 <td>
-                    <a class="btn btn-primary" href="/food/edit/">Edit</a>
+                    <a class="btn btn-primary" href="/food/edit/{{ row.id }}/">Edit</a>
                     <a class="btn btn-primary" href="#" onclick="confirmDeleteModal()">Delete</a>
                 </td>
             </tr>
@@ -58,10 +59,50 @@
         </table>
         {% endif %}
         <form method="GET" action="/food/add/">
-            <input type="submit" class="btn btn-primary" value="Add Food Item">
+            <input id='add-button' type="submit" class="btn btn-primary" value="Add Food Item">
         </form>
+        <h2>Daily Goal Progress:</h2>
+        {% if not food_data %}
+            <p>There are no meals to calculate your progress towards your daily goal.</p>
+        {% else %}
+            <table id='goal-table' class='table table-striped table-bordered table-sm' cellspacing='0' width='100%'>
+                <tr>
+                    <th>Calorie Goal Progress:</th>
+                    <th>Sodium Goal Progress:</th>
+                    <th>Protien Goal Progress:</th>
+                    <th>Carbohydrate Goal Progress:</th>
+                    <th>Fats Goal Progress:</th>
+                    <th>Sugar Goal Progress:</th>
+                </tr>
+                <tr>
+                    <td>{{ caloriePerc }}%</td>
+                    <td>{{ sodiumPerc }}%</td>
+                    <td>{{ protienPerc }}%</td>
+                    <td>{{ carbPerc }}%</td>
+                    <td>{{ fatPerc }}%</td>
+                    <td>{{ sugarPerc }}%</td>
+                </tr>
+            </table>
+        {% endif %}
     </div>
-
+    <!--Modal-->
+    <div id='deleteModal' class='modal fade' role='dialog'>
+        <div class='modal-dialog'>
+            <div class='modal-content'>
+                <div class='modal-header'>
+                    <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
+                    <h4 class="modal-title">Delete Food Item</h4>
+                </div>
+                <div class='modal-body'>
+                    <p>Do you really want to delete this Food Item?</p>
+                </div>
+                <div class='modal-footer'>
+                    <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
+                    <span id='deleteButton'></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Modal ends here-->
 </body>
-
 </html>
