--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -3,22 +3,27 @@
   {% load static %}
   {% include "bootstrap.html" %}
   <link rel="stylesheet" href="{% static 'chessboard.css' %}">
-  <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Caveat&family=Fugaz+One&family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">  <meta charset="utf-8">
   </head>
   <body>
     {% include "nav.html" %}
     <hr></hr>
     <big>About Me</big>
-    <p>My name is Liam Smith. I'm a Computer Science Major, and I'm
+    <p id='bio'>
+      My name is Liam Smith. I'm a Computer Science Major, and I'm
       originally from Santa Cruz. I am a junior,
       but I know I'll be here for longer than 4 years (thanks COVID). I'm more introverted
       than extroverted, and my hobbies reflect that. I enjoy reading, playing
       videogames, and hanging with close friends. I really love bike riding and driving, I feel it's the best way to clear my head and unwind.
       I have a 6-speed manual Mini Cooper S that I love whipping around. I don't know what field I want to go into
-      for Computer Science, but this class has proved to be my most interesting comp sci class so far, so maybe I'll enjoy web dev. </p>
+      for Computer Science, but this class has proved to be my most interesting comp sci class so far, so maybe I'll enjoy web dev. 
+    </p>
+    <hr></hr>
 
       <center><img src="{% static 'pics/CINS_465_asg1_pic.jpg' %}" width="500px" height="400px" alt="Me">
-      <img src="{% static 'pics/asg5_friends.jpg' %}" alt="Friends">
+      <img src="{% static 'pics/asg5_friends.jpg' %}" alt="Friends" width='500px' height='400px'>
       </center>
       <hr></hr>
 
