--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="{% static 'final.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Health Tracker</title>
 
