--- a/templates/food/food.html
+++ b/templates/food/food.html
@@ -18,6 +18,9 @@
     wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="{% static 'final.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Fugaz+One&family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">    
 </head>
 
 <body>
