--- a/templates/workouts/workouts.html
+++ b/templates/workouts/workouts.html
@@ -5,6 +5,8 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'chessboard.css' %}">
     <meta charset="UTF-8">
+    <script src="{% static 'final.js' %}"></script>
+
     {% include 'bootstrap.html' %}
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,7 +57,6 @@
                     <td>
                         <a class='btn btn-primary' href="/workouts/edit/{{ row.id }}/">Edit</a>
                         <a class='btn btn-primary' href="#" onclick='confirmDeleteModal()'>Delete</a>
-    
                     </td>
                 </tr>
             {% endfor %}
@@ -66,6 +67,25 @@
         </form>
     </div>
 
+    <!--Modal-->
+    <div id='deleteModal' class='modal fade' role='dialog'>
+        <div class='modal-dialog'>
+            <div class='modal-content'>
+                <div class='modal-header'>
+                    <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
+                    <h4 class="modal-title">Delete Food Item</h4>
+                </div>
+                <div class='modal-body'>
+                    <p>Do you really want to delete this Food Item?</p>
+                </div>
+                <div class='modal-footer'>
+                    <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
+                    <span id='deleteButton'></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Modal ends here-->
 </body>
 
 </html>
