--- a/templates/food/food.html
+++ b/templates/food/food.html
@@ -55,7 +55,7 @@
                 <td>{{ row.sugars }}</td>
                 <td>
                     <a class="btn btn-primary" href="/food/edit/{{ row.id }}/">Edit</a>
-                    <a class="btn btn-primary" href="#" onclick="confirmDeleteModal()">Delete</a>
+                    <a class="btn btn-primary" href="#" onclick="confirmDeleteModal({{ row.id }})">Delete</a>
                 </td>
             </tr>
             {% endfor %}
