--- a/templates/workouts/workouts.html
+++ b/templates/workouts/workouts.html
@@ -56,7 +56,7 @@
                     <td>{{ row.heartAvg }}</td>
                     <td>
                         <a class='btn btn-primary' href="/workouts/edit/{{ row.id }}/">Edit</a>
-                        <a class='btn btn-primary' href="#" onclick='confirmDeleteModal()'>Delete</a>
+                        <a class='btn btn-primary' href="#" onclick="confirmDeleteModal({{ row.id }})">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -73,10 +73,10 @@
             <div class='modal-content'>
                 <div class='modal-header'>
                     <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
-                    <h4 class="modal-title">Delete Food Item</h4>
+                    <h4 class="modal-title">Delete Workout</h4>
                 </div>
                 <div class='modal-body'>
-                    <p>Do you really want to delete this Food Item?</p>
+                    <p>Do you really want to delete this Workout?</p>
                 </div>
                 <div class='modal-footer'>
                     <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
