--- a/static/final.css
+++ b/static/final.css
@@ -97,7 +97,7 @@ h3 {
 /* CHART SECTION */
 
 .ct-label {
-    color: white
+    color: white !important;
 }
 
 .ct-series-a .ct-bar {
@@ -115,14 +115,18 @@ h3 {
     stroke-width: 15px;
 }
 
-.ct-series-a .ct-slice-donut {
-    stroke: rgba(55, 137, 206, 255);
+.ct-series-a .ct-area,
+.ct-series-a .ct-slice-donut-solid,
+.ct-series-a .ct-slice-pie {
     stroke-width: 5px !important;
+    fill: rgba(55, 137, 206, 255);
 }
 
-.ct-series-b .ct-slice-donut {
-    stroke: rgba(174, 137, 230, 255);
+.ct-series-b .ct-area,
+.ct-series-b .ct-slice-donut-solid,
+.ct-series-b .ct-slice-pie {
     stroke-width: 5px !important;
+    fill: rgba(174, 137, 230, 255);
 }
 
 .ct-series-a .ct-slice-pie {
