--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
-    <link rel="stylesheet" href="{% static 'final.css' %}">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'final.css' %}">
     <title>Health Tracker</title>
 
     {% include "bootstrap.html" %}
@@ -29,7 +30,8 @@
                 <div class="ct-chart ct-perfect-fourth" , id="example-pie-chart">
                     <script>
                         new Chartist.Pie('.ct-chart', {
-                            series: [20, 10]
+                            labels: ['Burned Calories', 'Calories Remaining'],
+                            series: [{{calsBurned}}, {{calGoal}}]
                           }, {
                             donut: true,
                             donutWidth: 60,
