--- a/templates/workouts/workouts.html
+++ b/templates/workouts/workouts.html
@@ -8,7 +8,7 @@
     <script src="{% static 'final.js' %}"></script>
 
     {% include 'bootstrap.html' %}
-    <title>Document</title>
+    <title>Workout Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Caveat&family=Fugaz+One&family=Goldman&family=Staatliches&family=Water+Brush&display=swap" rel="stylesheet">  
