--- a/static/final.css
+++ b/static/final.css
@@ -41,6 +41,10 @@ th {
     margin-bottom: 20px;
 }
 
+#col-sm {
+    border: 10px solid black;
+}
+
 body {
     background-color: rgba(52, 55, 70, 255) !important;
 }
