--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -49,7 +49,7 @@
                 <div class="ct-chart-br ct-perfect-fourth" , id="example-bar-graph">
                     <script>
                         new Chartist.Bar('.ct-chart-br', {
-                            labels: [],
+                            labels: [{{ names }}],
                             series: [
                                 {{ calories }},
                                 {{ sodium }},
